@@ -1,4 +1,6 @@
-See:
-* http://code.google.com/p/libcnotify/wiki/Building
-* README.macosx
+libcnotify is a library for cross-platform C notification functions.
+
+For more information see:
+* Project documentation: https://github.com/libyal/libcnotify/wiki/Home
+* How to build from source: https://github.com/libyal/libcnotify/wiki/Building
 
