@@ -28,7 +28,7 @@ BEGIN
       VALUE "OriginalFilename",		"libcnotify.dll\0"
       VALUE "ProductName",		"libcnotify\0"
       VALUE "ProductVersion",		"@VERSION@" "\0"
-      VALUE "Comments",			"For more information visit http://code.google.com/p/libcnotify/\0"
+      VALUE "Comments",			"For more information visit https://github.com/libyal/libcnotify/\0"
     END
   END
   BLOCK "VarFileInfo"
