@@ -45,7 +45,7 @@ None
 None
 .Sh BUGS
 Please report bugs of any kind to <joachim.metz@gmail.com> or on the project website:
-http://code.google.com/p/libcnotify/
+https://github.com/libyal/libcnotify
 .Sh AUTHOR
 These man pages were written by Joachim Metz.
 .Sh COPYRIGHT
