@@ -1,5 +1,8 @@
 TODO
 
+20140915
+* changes for project site move
+
 20140730
 * updated dpkg files
 
